<resources>
    <string name="app_name">RepoTracker</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="my_repos">My repositories</string>
    <string name="set_user">Set User</string>
    <string name="dark_mode">Toggle Dark Mode</string>
    <string name="reset">Reset</string>
    <string name="search_info">
        Search for GitHub repositories!
    </string>
    <string name="empty_search">
        No query entered, nothing to search for.
    </string>
    <string name="empty_username">
        Please set your GitHub username to view your own repositories!
    </string>
    <string name="error_message">
        Failed to get results. Please try again.
    </string>
    <string name="error_empty">
        No results found. Please try again.
    </string>
    <string name="user_input">
        Fill with your GitHub username
    </string>
    <string name="user_info">
        Please enter your GitHub username below:
    </string>
    <string name="save">Save</string>
</resources>