<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/user_repos"
        android:title="@string/my_repos" />
    <item
        android:id="@+id/set_user"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/set_user" />

    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/reset"/>
</menu>


